# half-life-templeos

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  liblist.gam  monitor_fingerprints.txt
docs/: ARCHITECTURE.md
integration/: apply-integration.ps1  halflife-updated.patch
src/client/: keymap.h  terminal_mode.cpp
src/glhook/: gl_hook.c  gl_hook.h
src/rfb/: rfb_client.c  rfb_client.h
src/sdk_glue/: toshl_glue.cpp  toshl_hooks.h  toshl_input_win32.cpp
src/vmproc/: vm_launcher.c  vm_launcher.h
tools/: rfb_probe.c
vm/: setup.ps1
